# tmuxcc

./: .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  README.md  install.sh  server.json
.claude/: settings.json
.dxos/: control-plane.json
.github/workflows/: ci.yml  release.yml
.vision/: .gitignore  history.jsonl  vision.json
assets/: dashboard.html
crates/audit/: Cargo.toml
crates/audit/src/: lib.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: lib.rs
crates/knowledge/: Cargo.toml
crates/knowledge/src/: lib.rs
crates/pipeline/: Cargo.toml
crates/pipeline/src/: lib.rs
crates/queue/: Cargo.toml
crates/queue/src/: lib.rs
crates/swarm/: Cargo.toml
crates/swarm/src/: lib.rs
crates/tracker/: Cargo.toml
crates/tracker/src/: lib.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
crates/vision/: Cargo.toml
crates/vision/src/: lib.rs
docs/: ARCHITECTURE_BLUEPRINT.md  CLIENT_ONBOARDING_BLUEPRINT.md  CLIENT_PORTAL_PLAYBOOK.md  DISCOVERY_AND_DESIGN_PLAYBOOK.md  DXOS_MASTER_ARCHITECTURE.md  EXPERIENCE_BLUEPRINT.md  HISTORY_OF_DX_TERMINAL.md  HOSTED_SYNC_MODEL.md  MCP_RESEARCH.md  NON_TECH_GUIDE.md  PROJECT_ADOPTION_AND_RECOVERY.md  PROVIDER_AUTOMATION_INTEROP.md  PROVIDER_PLUGIN_INTEROP.md  e2e-report-2026-03-10.md  vdd-2.0-phase-0-1-tickets.md  vdd-legacy-storage-contract.md
src/: agent_assets.rs  agentos.rs  analytics.rs  app.rs  audit.rs  capacity.rs  claude.rs  collab.rs  config.rs  dashboard.rs  design_tokens.rs  dxos.rs  dxos_runtime.rs  dxos_scheduler.rs  dxos_supervisor.rs  external_mcp.rs  factory.rs  ipc.rs  knowledge.rs  lib.rs  machine.rs  main.rs  mcp_registry.rs  multi_agent.rs  provider_asset_plugins.rs  provider_plugins.rs  quality.rs  queue.rs  recovery_planning.rs  runtime_broker.rs  scanner.rs  screen.rs  session_stream.rs  state_reader.rs  tmux.rs  tracker.rs  ui_audit.rs  ux_audit.rs  vision.rs  vision_events.rs  (+2 more)
src/agents/: types.rs
src/analytics/: db.rs  mod.rs  tracker.rs
src/app/: actions.rs  config.rs  mod.rs  state.rs
src/engine/: health.rs  mod.rs  reaper.rs  reconcile.rs  retention.rs
src/github/: mod.rs
src/mcp/: mod.rs  server.rs  tools.rs  types.rs
src/mcp/servers/: coord.rs  core_server.rs  intel.rs  mod.rs  queue.rs  tracker.rs
src/mcp/tools/: analytics_tools.rs  audit_tools.rs  capacity_tools.rs  collab_tools.rs  config_tools.rs  dashboard_tools.rs  dxos_tools.rs  factory_tools.rs  gateway_tools.rs  git_tools.rs  helpers.rs  knowledge_tools.rs  mod.rs  monitoring.rs  multi_agent_tools.rs  orchestrate.rs  panes.rs  quality_tools.rs  queue_tools.rs  routing.rs  scanner_tools.rs  screen_tools.rs  tracker_tools.rs  ui_audit_tools.rs  vision_tools.rs
src/monitor/: mod.rs  system_stats.rs  task.rs
src/panels/: graph.rs  manager.rs  mod.rs
src/parsers/: claude_code.rs  codex_cli.rs  gemini_cli.rs  mod.rs  opencode.rs
src/pty/: agent.rs  health.rs  manager.rs  mod.rs  output.rs  session.rs
src/state/: events.rs  mod.rs  persistence.rs  types.rs
src/sync/: git.rs  mod.rs
src/tmux/: client.rs  pane.rs
src/tui/: dashboard.rs  dispatch.rs  input.rs  mod.rs  overlays.rs  pane_view.rs  widgets.rs
src/ui/: app.rs  layout.rs  mod.rs  styles.rs
src/ui/components/: agent_tree.rs  analytics_panel.rs  dashboard_panel.rs  factory_panel.rs  footer.rs  header.rs  help.rs  input.rs  mod.rs  pane_preview.rs  queue_panel.rs  subagent_log.rs
src/web/: api.rs  mod.rs  replicator.rs  sse.rs  ws.rs
tests/: build_verify.py  tui_integration.rs  unit_tests.rs
