[package]
name = "agentos"
version = "0.1.0"
edition = "2021"
description = "AgentOS: AI agent orchestration runtime"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# MCP server
rmcp = { version = "0.15", features = ["server", "transport-io", "macros"] }
schemars = "1.0"

# PTY management (replaces tmux)
portable-pty = "0.9"
vt100 = "0.16"

# TUI
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }

# Web server
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
async-stream = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
nix = { version = "0.30", features = ["signal", "process"] }
regex = "1"

[profile.release]
opt-level = 3
lto = true
strip = true
