[package]
name = "dx-terminal"
version = "0.3.0"
edition = "2021"
description = "DX Terminal — the AI-native terminal multiplexer. Monitor, manage, and orchestrate AI coding agents with real-time cost tracking."
authors = ["DX Terminal Contributors"]
license = "MIT"
repository = "https://github.com/pdaxt/dx-terminal"
readme = "README.md"
keywords = ["terminal", "ai", "multiplexer", "claude", "developer-tools", "tui"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "dx"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
parking_lot = "0.12"
unicode-width = "0.1"
sysinfo = "0.32"
reqwest = { version = "0.12", features = ["json"] }

# PTY management — own the terminal, no tmux dependency
portable-pty = "0.8"
vte = "0.13"

# Built-in MCP server
rmcp = { version = "1.1", features = ["server", "transport-io"] }

# GitHub integration
octocrab = "0.41"

# Analytics persistence
rusqlite = { version = "0.31", features = ["bundled"] }

# Misc
uuid = { version = "1", features = ["v4"] }
bytes = "1"

[dev-dependencies]
tempfile = "3"
