[package]
name = "dx-audit"
version = "0.1.0"
edition = "2021"
description = "Code, UI, and UX audit framework — WCAG, design tokens, heuristics, security"
license = "MIT"
repository = "https://github.com/pdaxt/dx-terminal"
keywords = ["audit", "accessibility", "wcag", "design-system"]
categories = ["development-tools"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
