[package]
name = "dx-gateway"
version = "0.1.0"
edition = "2021"
description = "MCP Gateway: spawn, route, and cache micro MCPs"

[dependencies]
dx-types = { path = "../types" }

# MCP client (for spawning child MCPs)
rmcp = { version = "0.15", features = ["server", "client", "transport-io", "transport-child-process", "macros"] }

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Utilities
tracing = "0.1"
anyhow = "1"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3"
