[package]
name = "dx-pipeline"
version = "0.1.0"
edition = "2021"
description = "Development pipeline framework — dev→gate→qa→review→merge with tracked stages"
license = "MIT"
repository = "https://github.com/pdaxt/dx-terminal"
keywords = ["pipeline", "ci-cd", "development", "framework"]
categories = ["development-tools"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
