[package]
name = "dx-queue"
version = "0.1.0"
edition = "2021"
description = "Task queue with auto-cycle, decomposition, and priority management"
license = "MIT"
repository = "https://github.com/pdaxt/dx-terminal"
keywords = ["task-queue", "scheduling", "auto-cycle", "framework"]
categories = ["development-tools"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
