[package]
name = "dx-swarm"
version = "0.1.0"
edition = "2021"
description = "Multi-agent coordination framework — ports, locks, branches, messaging, knowledge sharing"
license = "MIT"
repository = "https://github.com/pdaxt/dx-terminal"
keywords = ["multi-agent", "coordination", "distributed", "framework"]
categories = ["development-tools"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
