[package]
name = "dx-tracker"
version = "0.1.0"
edition = "2021"
description = "Issue tracking, milestones, and process management framework"
license = "MIT"
repository = "https://github.com/pdaxt/dx-terminal"
keywords = ["issue-tracker", "milestones", "project-management", "framework"]
categories = ["development-tools"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
