[package]
name = "dx-vision"
version = "0.1.0"
edition = "2021"
description = "Vision-Driven Development framework — recursive vision trees, goals, features, tasks, Git sync"
license = "MIT"
repository = "https://github.com/pdaxt/dx-terminal"
keywords = ["vision", "project-management", "development", "framework"]
categories = ["development-tools"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
